Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50853

DBus fails to compile for wince

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.6.0 Beta
    • D-Bus
    • None

    Description

      "interface class" and "interface struct"[1] is a keyword in windows. Under wince interface is a define, so it cannot be used anywhere. It is defined in a central place and when some standard headers are getting included this define is set. Hence this breaks the build.

      [1] https://msdn.microsoft.com/en-us/library/2e6a4at9.aspx

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aholza Andreas Holzammer
            aholza Andreas Holzammer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes