Fix dbus wince build

interface is a define under wince. This define is included even
with standard header includes already. It needs to be undefined
for using it.

Task-number: QTBUG-50853
Change-Id: Ie44681f03709848e9747a8aec11835c8d62aa409
Reviewed-by: Lars Knoll <lars.knoll@theqtcompany.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>